data/derived/sp14/progs/unify/prog2781.ml.out
Characters 57-58:
  let _ = pipe [(fun x -> x + 3);(fun x-> x + x);(fun x -> x**x)] 3;;
                                                           ^
Error: This expression has type int but an expression was expected of type
         float
